// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`output complex sfc 1`] = `
Object {
  "body": "import {
  props,
  withProps
} from \\"./../../node_modules/skatejs/esnext/with-props.js\\";
import { withRender } from \\"./../../node_modules/skatejs/esnext/with-render.js\\";
import { html, render } from \\"./../../node_modules/lit-html/lit-html.js\\";
function withLitHtml(Base) {
  return class extends withRender(withProps(Base || HTMLElement)) {
    rendererCallback(renderRoot, renderCallback) {
      render(renderCallback(), renderRoot);
    }
  };
}
const Base = withLitHtml();

export default class XF3327e6 extends Base {
  renderCallback({ yell }) {
    return html\`
  \${yell ? html\`<strong><slot></slot></strong>\` : html\`<em><slot></slot></em>\`}
\`;
  }
}

XF3327e6.props = { yell: props.boolean || boolean };

customElements.define(\\"x-f3327e6\\", XF3327e6);
",
  "sfc": true,
}
`;

exports[`output html 1`] = `
Object {
  "body": "<script type=\\"module\\">
import XHello from \\"./hello.js\\";
</script>
<x-8a66b12 name=\\"world\\"></x-8a66b12>",
  "sfc": false,
}
`;

exports[`output simple sfc 1`] = `
Object {
  "body": "import XWorld from \\"./world.js\\";

function ucfirst(str) {
  return str[0].toUpperCase() + str.substring(1);
}

import {
  props,
  withProps
} from \\"./../../node_modules/skatejs/esnext/with-props.js\\";
import { withRender } from \\"./../../node_modules/skatejs/esnext/with-render.js\\";
import { html, render } from \\"./../../node_modules/lit-html/lit-html.js\\";
function withLitHtml(Base) {
  return class extends withRender(withProps(Base || HTMLElement)) {
    rendererCallback(renderRoot, renderCallback) {
      render(renderCallback(), renderRoot);
    }
  };
}
const Base = withLitHtml();

export default class X8a66b12 extends Base {
  renderCallback({ name }) {
    return html\`
  Hello,
  <x-f3327e6>\${ucfirst(name)}</x-f3327e6>!
\`;
  }
}

X8a66b12.props = { name: props.string || string };

customElements.define(\\"x-8a66b12\\", X8a66b12);
",
  "sfc": true,
}
`;
